# tinypgwebsocketapi

./: .gitignore  LICENSE  Makefile  Makefile.am  README.md  autogen.sh  configure.ac  lighttpd-tinypgwebsocketapi.conf  lighttpd.conf.patch  lighttpd.service  loginform.html  mod_cgi.patch  modules.conf.patch  pg.h  printenv.c  tail.sh  test.py  tinypgwebsocketapi.py  tpgwsapi.c  tpgwsapi_test.c  traceviewer.html
dist_app/: index.html  loginform.html  tpgwsapi_echo.html  traceviewer.html
examples/: test_echo.sql
scripts/: autoclean.sh  remove_cr.sh
sql/: api.pgsql  api.sql  handler.pgsql  login.pgsql
src/: Makefile.am  chunked_pipe.c  pg.h  printenv.c  tail.sh  test.py  tinypgwebsocketapi.py  tpgwsapi.c  tpgwsapi.h  tpgwsapi_pg.h  traceviewer.html
webapp/: index.html  loginform.html  tpgwsapi_echo.html
